versions/v4.0.0/build/dts/api/bindings/mbox/nxp,s32-mru.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/mbox/nxp,s32-mru.html
original_path: build/dts/api/bindings/mbox/nxp,s32-mru.html
---

# nxp,s32-mru

Vendor: [NXP Semiconductors](../../bindings.md#dt-vendor-nxp)

Note

An implementation of a driver matching this compatible is available in
[drivers/mbox/mbox\_nxp\_s32\_mru.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/mbox/mbox_nxp_s32_mru.c).

## Description

```text
NXP S32 Message Receive Unit

The MRU couples with a processor and allows to receive messages from senders,
which are other modules or processors. The interrupts from each MRU instance
route to specific Private Peripheral Interrupts (PPIs) of the corresponding
core.

This driver offers a simplified operation in order to integrate with Zephyr
Mbox API:
  - Each channel uses only the first mailbox, as current API does not allow
    to group hardware channel's mailboxes in logical channels.
  - The MTU is fixed to the size of one mailbox, as current API does not
    allow variable length per channel.

In a normal use-case for IPC, the receiver core must enable and set the number
of receive channels on the MRU instance coupled with the core, for instance in
a devicetree overlay. In turn, the sender(s) must enable the MRU instance of the
receiver to be able to transmit on it. There is no need to define the transmit
channels on which the sender is intended to transmit.

For example, core B and C want to send messages to core A in channels 0 and 1,
respectively, then the devicetree overlays will look like:

  // overlay of core A
  mruA {
    rx-channels = <2>;
    status = "okay";
  };

  // overlays of core B and core C
  mruA {
    status = "okay";
  };
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `rx-channels` | `int` | ```text Number of receive channels enabled on this instance. Setting this value to N, will enable channels 0 to N-1, consecutively. It should be set by the receiver core coupled with this MRU instance.  For example, if receiver A wants to Rx on channels 0 and 1, then A must set rx-channels of mruA as follows:    mruA {     rx-channels = <2>;     status = "okay";   }; ```  Legal values: `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8`, `9`, `10`, `11`, `12` |
| `#mbox-cells` | `int` | ```text Number of items to expect in a Mailbox specifier ```  This property is **required**. |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “nxp,s32-mru” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `interrupts` | `array` | ```text interrupts for device ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |

## Specifier cell names

- mbox cells: channel
